Changes in 4.2:
- Make it possible to check individual files of a torrent

Changes in 4.1rc1:
- Make sure that apply button of config dialog is enabled properly when the group changes in the scanfolder settings
- Add kio-magnet
- Improve performance of ktorrent in situations where there are many torrents (262571)
- Fix memory leak on exit (263802)

Changes in 4.1beta1:
- Remove libktupnp it is now part of libktorrent
- Add support for superseeding (171661)
- Change from and to fields to always ensure that from is smaller then to in the bandwidth scheduler plugin (225951)
- Show if a peer is using the µTP protocol or not 
- Cleanup file dialog filters for torrents and make sure that files named torrent, are also seen by the filter (241259)
- Ensure that webinterface plugin works properly with bindv6only flag on (238688)
- Add option to not restore the previous session of the search plugin (233288)
- Save suspended state on exit and restore on restart (241675)
- Add support for cookies in syndication plugin (244967)
- Change GUI to use KParts
- Add feature to set the move on completion directory in the syndication plugin filters
- Improve display of errors in the syndication plugin when downloading a feed fails (246421)
- Make ChunkDownloadView and PeerView use a QSortFilterProxyModel (246835)
- Add download and move when completed location history buttons to FileSelectDlg (218048)
- Make file view of FileSelectDlg sortable (248090)
- Clicking item in day list of AddItemDlg of bwscheduler plugin now toggles it (225953)
- Add support for emule blocklists (194915)
- Add option to configure the number of log lines shown in the logviewer (223887)
- Add default move on completion location to group policy (248092)
- Prevent torrents from sharing the same files (228220)
- Add option to open all torrents silently
- Add exclusion patterns to syndication plugin filters (251141)